# VirtualMoneyCounter

./: CMakeLists.txt  Main.cpp  README.md  vc.c  vc.h
src/: Main.cpp  vc.c  vc.h
